Added create user api
